fixed footer button in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,10 @@ body {
   color: var(--textWhite);
   border-color: var(--textWhite);
 }
+.dark-mode section .footer-btn:hover {
+  color: var(--mainColor);
+  background: var(--textWhite);
+}
 
 /* dark mode footer */
 .dark-mode section .footer-container {
